--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.24",
-    "next": "15.5.4",
+    "next": "^16.1.1",
     "ogl": "^1.0.11",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "recharts": "^3.4.1",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1"
